# Natrix

./: CMakeLists.txt  README.md
src/: main.cpp
src/engine/ai/: AI.cpp  AI.hpp  MoveSorter.cpp  MoveSorter.hpp  PassedPawnMasks.hpp  SearchInterrupter.cpp  SearchInterrupter.hpp  StaticEvaluator.cpp  StaticEvaluator.hpp  TranspositionTable.cpp  TranspositionTable.hpp
src/engine/base/moveGeneration/: KingMasks.hpp  KnightMasks.hpp  LegalMoveGen.cpp  LegalMoveGen.hpp  LegalMoveGenTester.cpp  LegalMoveGenTester.hpp  MoveList.cpp  MoveList.hpp  PsLegalMoveMaskGen.cpp  PsLegalMoveMaskGen.hpp  SlidersMasks.hpp
src/engine/base/positionRepresentation/: Bitboard.hpp  Move.cpp  Move.hpp  Pieces.cpp  Pieces.hpp  Position.cpp  Position.hpp  RepetitionHistory.cpp  RepetitionHistory.hpp  ZobristHash.cpp  ZobristHash.hpp  ZobristHashConstants.hpp
src/ui/: Storage.cpp  Storage.hpp  UI.cpp  UI.hpp
